--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,20 +1,89 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OrderController!{% endblock %}
+{% set pagetitle = 'Orders'|trans %}
+{% block title pagetitle %}
+
+{% block breadcrumb %}
+    {% set breadcrumb = [{ "current":(pagetitle) }] %}
+    {% include "global/breadcrumb.html.twig" with breadcrumb %}
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/rdequidt/www/restaurant/src/Controller/OrderController.php</code></li>
-        <li>Your template at <code>/home/rdequidt/www/restaurant/templates/order/index.html.twig</code></li>
-    </ul>
-</div>
+    <section class="pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card bg-transparent">
+                        <div class="card-header bg-transparent border-bottom p-0 pb-3">
+                            <h6 class="card-title mb-0">
+                                {{ 'List of commands'|trans }}
+                            </h6>
+                        </div>
+                        <div class="table-responsive overflow-y-hidden">
+                            <table class="table mb-0 text-nowrap table-hover table-centered" data-role="accessList">
+                                <thead class="">
+                                    <tr>
+                                        <th>{{ 'Reference'|trans}}</th>
+                                        <th>{{ 'Date'|trans }}</th>
+                                        <th>{{ 'Number of products'|trans }}</th>
+                                        <th>{{ 'Total (keys)'|trans }}</th>
+                                        <th>{{ 'Status'|trans }}</th>
+                                        <th>{{ 'Detail'|trans }}</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for order in orders %}
+                                        {% if order.state != "cart" %}
+                                            <tr>
+                                                <td>{{ order.reference }}</td>
+                                                <td>{{ order.createdAt|format_date('long') }}</td>
+                                                <td>{{ order.numberOfProducts }}</td>
+                                                <td>{{ order.total }} {{ 'keys'|trans }}</td>
+                                                <td>
+                                                    {% if order.state == "pending" %}
+                                                        <span class="badge bg-primary">{{ 'In process'|trans }}</span>
+                                                    {% elseif order.state == "on_delivery" %}
+                                                        <span class="badge bg-info">{{ 'In transit'|trans }}</span>
+                                                    {% elseif order.state == "delivered" %}
+                                                        <span class="badge bg-success">{{ 'Delivered'|trans }}</span>
+                                                    {% elseif order.state == "canceled" %}
+                                                        <span class="badge bg-warning">{{ 'Canceled'|trans }}</span>
+                                                    {% else %}
+                                                        <span class="badge bg-danger">{{ 'Delivery incident'|trans }}</span>
+                                                    {% endif %}
+                                                </td>
+                                                <td>
+                                                    <div class="dropdown dropstart">
+                                                        <a class="btn-icon btn btn-ghost btn-sm rounded-circle" href="#" role="button" id="Dropdown-{{ order.id }}" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                            <i class="fas fa-ellipsis-v"></i>
+                                                        </a>
+                                                        <div class="dropdown-menu" aria-labelledby="Dropdown-{{ order.id }}" style="">
+                                                            <span class="dropdown-header">{{ 'Settings'|trans }}</span>
+                                                            <a class="dropdown-item" href="{{ path("order_detail", {id: order.id}) }}">
+                                                                <i class="fas fa-eye fa-fw dropdown-item-icon"></i>
+                                                                {{ 'Detail'|trans }}
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        {% endif %}
+                                    {% else %}
+                                        <tr>
+                                            <td class="text-center" colspan="8">{{ 'No result'|trans }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    {% if is_granted("ROLE_MANAGER") or is_granted("ROLE_SALES_PERSON") %}
+                        {# {{ render(path('order_clients')) }} #}
+                        {% include "order/_clients.html.twig" %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
