--- a/templates/dashboard/shared/account/change_password.html.twig
+++ b/templates/dashboard/shared/account/change_password.html.twig
@@ -7,7 +7,7 @@
     <section class="pt-sm-7">
         <div class="container pt-3 pt-xl-5">
             <div class="row">
-                {% include "global/dashboard-items-navbar-vertical.html.twig" with {activerd: 'change_password'} %}
+                {% include "global/dashboard-items-navbar-vertical.html.twig" with {activerd: 'account_change_password'} %}
                 <div class="col-lg-8 col-xl-9 ps-lg-4 ps-xl-6">
                     <div class="d-flex justify-content-between align-items-center mb-5 mb-sm-6">
                         <h1 class="h3 mb-0">{{ 'My profile'|trans }}</h1>
