--- a/templates/global/dashboard-items-navbar-vertical.html.twig
+++ b/templates/global/dashboard-items-navbar-vertical.html.twig
@@ -31,7 +31,7 @@
                             </a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link {% if activerd == 'change_password' %}active{% endif %}" href="{{ path('dashboard_account_change_password') }}">
+							<a class="nav-link {% if activerd == 'account_change_password' %}active{% endif %}" href="{{ path('dashboard_account_change_password') }}">
 								<i class="fas fa-user-lock fa-fw me-2"></i>{{ 'Change Password'|trans }}
                             </a>
 						</li>
