--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -61,20 +61,7 @@
                         </span>
                     </div>
                     <img src="{{ post.imageName ? (post.getImagePath) : post.getImagePlaceholder }}" class="img-fluid rounded mt-5" alt="{{ post.name }}">
-                    <p class="mt-5">{{ post.content | html_markdown }}</p>
-                    <div class="bg-light border rounded d-md-flex justify-content-between align-items-center text-center p-3 mt-5">
-                        <h6 class="mb-0">{{ 'Was this article helpful?'|trans }}</h6>
-                        <small class="py-3 p-md-0 d-block"></small>
-                        {% if app.user %}
-                            <a href="{{ path('post_like', {id: post.id}) }}" data-action="like" data-nb={{ post.likes|length }} class="text-secondary text-primary-hover mb-0">
-                            {% endif %}
-                                <i class="far fa-thumbs-up me-1 {{ app.user in post.likes ? '' : 'd-none' }}" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ 'Yes like'|trans }}"></i> 
-                                <i class="far fa-thumbs-down ms-1 {{ app.user in post.likes ? 'd-none' : '' }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ "No like"|trans }}"></i> 
-                                <span>{{ post.likes|length }} {{ 'I like'|trans }}</span>
-                            {% if app.user %}
-                            </a>
-                        {% endif %}
-                    </div>
+                    <div class="mt-5">{{ post.content | html_markdown }}</div>
                     {% if previous and next %}
                         <div class="d-md-flex justify-content-between align-items-center text-center mt-5">
                             {% if previous %}
@@ -156,23 +143,6 @@
                     {% endif %}
                 </div>
                 <div class="col-lg-4 ps-xl-6">
-                    {#  
-                    <div class="card card-body d-inline-block bg-light border p-4">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="avatar avatar-lg flex-shrink-0 me-2">
-                                {% include "global/user-avatar.html.twig" with { user: post.author, type: "lg" } %}
-                            </div>
-                            <div class="ms-2">
-                                <h6 class="mb-0">
-                                    <a href="#">{{ post.author.username }}</a>
-                                </h6>
-                                <small>{{ post.author.getRole|trans|raw }}</small>
-                            </div>
-                        </div>
-                        <p>{{ post.author.about }}</p>
-                        <a href="#" class="btn btn-sm btn-outline-primary mb-0">{{ 'Follow author'|trans }}</a>
-                    </div>
-                    #}
                     <div class="align-items-center mb-5">
                         <h6 class="mb-3 d-inline-block">{{'Search'|trans }}:</h6>
                         <ul class="list-group list-group-flush">
@@ -183,6 +153,39 @@
                                 </a>
                             </li>
                         </ul>
+                    </div>
+                    <div class="card card-body d-inline-block bg-light border p-4 mb-5">
+                        <div class="d-flex align-items-center mb-3">
+                            <div class="avatar avatar-lg flex-shrink-0 me-2">
+                                {% include "global/user-avatar.html.twig" with { user: post.author, type: "lg" } %}
+                            </div>
+                            <div class="ms-2">
+                                <h6 class="mb-0">
+                                    <a href="javascript:void;">{{ post.author.username }}</a>
+                                </h6>
+                                <small>{{ post.author.getRole|trans|raw }}</small>
+                            </div>
+                        </div>
+                        <p>{{ post.author.about }}</p>
+                        <a href="javascript:void;" class="btn btn-sm btn-outline-primary mb-0">{{ 'Follow author'|trans }}</a>
+                    </div>
+                    <div class="card card-body bg-light p-4 mb-5">
+                        <svg class="mb-3" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_1113_392)">
+                            <path class="fill-primary" d="M22.5492 24.7427C23.8548 25.6131 26.1456 25.6132 27.4515 24.7426C27.4517 24.7425 27.452 24.7423 27.4522 24.7422L49.7048 9.90706C48.9749 7.79611 46.9686 6.27539 44.6128 6.27539H5.38754C3.03156 6.27539 1.0254 7.79611 0.29541 9.90706L22.5485 24.7423C22.5488 24.7425 22.549 24.7425 22.5492 24.7427Z"></path>
+                            <path class="fill-mode" d="M29.077 27.1812C29.0767 27.1814 29.0765 27.1816 29.0763 27.1817C27.9335 27.9435 26.4665 28.3244 25 28.3244C23.5332 28.3244 22.0668 27.9436 20.9239 27.1816C20.9237 27.1815 20.9236 27.1814 20.9234 27.1813L0 13.2324V38.3373C0 41.3077 2.41672 43.7244 5.38735 43.7244H44.6128C47.5834 43.7244 50 41.3077 50 38.3373V13.2324L29.077 27.1812Z"></path>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_1113_392">
+                            <rect width="50" height="50" fill="white"></rect>
+                            </clipPath>
+                            </defs>
+                        </svg>
+                        <h6 class="mb-3">Get the latest Mizzle article delivered to your inbox</h6>
+                        <form>
+                            <input type="email" class="form-control mb-2" placeholder="Email address">
+                            <button type="submit" class="btn btn-dark mb-0">Subscribe</button>
+                        </form>
                     </div>
                     {% set similarPosts = setting.getBlogPosts({"limit": 6, "category": post.category.slug, "otherthan": post.id}).getQuery().getResult() %}
                     {% if similarPosts | length %}
@@ -214,24 +217,6 @@
                             </ul>
                         </div>
                     {% endif %}
-                    <div class="card card-body bg-light p-4">
-                        <svg class="mb-3" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_1113_392)">
-                            <path class="fill-primary" d="M22.5492 24.7427C23.8548 25.6131 26.1456 25.6132 27.4515 24.7426C27.4517 24.7425 27.452 24.7423 27.4522 24.7422L49.7048 9.90706C48.9749 7.79611 46.9686 6.27539 44.6128 6.27539H5.38754C3.03156 6.27539 1.0254 7.79611 0.29541 9.90706L22.5485 24.7423C22.5488 24.7425 22.549 24.7425 22.5492 24.7427Z"></path>
-                            <path class="fill-mode" d="M29.077 27.1812C29.0767 27.1814 29.0765 27.1816 29.0763 27.1817C27.9335 27.9435 26.4665 28.3244 25 28.3244C23.5332 28.3244 22.0668 27.9436 20.9239 27.1816C20.9237 27.1815 20.9236 27.1814 20.9234 27.1813L0 13.2324V38.3373C0 41.3077 2.41672 43.7244 5.38735 43.7244H44.6128C47.5834 43.7244 50 41.3077 50 38.3373V13.2324L29.077 27.1812Z"></path>
-                            </g>
-                            <defs>
-                            <clipPath id="clip0_1113_392">
-                            <rect width="50" height="50" fill="white"></rect>
-                            </clipPath>
-                            </defs>
-                        </svg>
-                        <h6 class="mb-3">Get the latest Mizzle article delivered to your inbox</h6>
-                        <form>
-                            <input type="email" class="form-control mb-2" placeholder="Email address">
-                            <button type="submit" class="btn btn-dark mb-0">Subscribe</button>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
