--- a/templates/global/product-card.html.twig
+++ b/templates/global/product-card.html.twig
@@ -4,13 +4,13 @@
 {% if customLink is defined %}
     {% set link = customLink %}
 {% else %}
-    {% set link = path('product', { id : product.id }) %} 
+    {% set link = path('shop_product', { slug: product.slug }) %} 
 {% endif %}
 <div class="col-sm-6 col-lg-4 col-xl-3">
 	<div class="card border bg-transparent overflow-hidden p-0 h-100">
 		<div class="position-absolute top-0 start-0 p-3">
-			<span class="badge" style="background-color: {{ product.subCategories[0].color }}">
-                {{ product.subCategories[0].name }}
+			<span class="badge" style="background-color: {{ product.category.color }}">
+                {{ product.category.name }}
             </span>
 			{% if product.tax %}
 				<span class="badge text-bg-danger ms-2">{{ product.tax * 100 }}% {{ 'off'|trans }}</span>
@@ -42,22 +42,12 @@
 			</ul>
 		</div>
 		<div class="card-footer border-0 bg-transparent d-flex justify-content-between align-items-center pt-0">
-			<div class="d-flex align-items-center gap-2 justify-content-center">
-				{% if product.discount > 0 %}
-					<p class="fw-bold text-success mb-0">
-						{{ (settings['currency_position']  == 'left' ? settings['currency_symbol'] : '') ~ product.salePrice ~ (settings['currency_position'] == 'right' ? settings['currency_symbol'] : '') }}
-					</p>
-					<small class="text-decoration-line-through">
-						{{ (settings['currency_position']  == 'left' ? settings['currency_symbol'] : '') ~ product.price ~ (settings['currency_position'] == 'right' ? settings['currency_symbol'] : '') }}
-					</small>
-				{% else %}
-					<p class="fw-bold text-success mb-0">
-						{{ (settings['currency_position']  == 'left' ? settings['currency_symbol'] : '') ~ product.price ~ (settings['currency_position'] == 'right' ? settings['currency_symbol'] : '') }}
-					</p>
-				{% endif %}
-			</div>
+			<p class="fw-bold text-success mb-0">
+				{{ product.amount }}
+				<i class="fas fa-key ms-2"></i>
+			</p>
 			{% if product.stock > 0 %}
-				<a href="{{ path('cart_add', { id : product.id }) }}" class="btn btn-dark mb-0 z-index-2">
+				<a href="{{ path("cart_add", {slug: product.slug}) }}" class="btn btn-dark mb-0 z-index-2">
 					<i class="fas fa-cart-shopping"></i>
 				</a>
 			{% else %}
