--- a/templates/shop/product.html.twig
+++ b/templates/shop/product.html.twig
@@ -9,84 +9,96 @@
 {% endblock %}
 
 {% block body %}
-    {% if cart is defined and cart %}
-        <div class="modal modal-onload" tabindex="-1">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <div class="alert alert-info text-center mb-0">{{ 'Product added to cart successfully.'|trans }}</div>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="{{ path("shop_index") }}" class="btn btn-secondary" data-bs-dismiss="modal">
+	{% if cart is defined and cart %}
+		<div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg modal-onload">
+				<div class="modal-content">
+					<div class="modal-body">
+						<div class="alert alert-info text-center mb-0">{{ 'Product added to cart successfully.'|trans }}</div>
+					</div>
+					<div class="modal-footer">
+						<a href="{{ path("shop_index") }}" class="btn btn-secondary" data-bs-dismiss="modal">
                             {{ 'Continue my order'|trans }}
                         </a>
-                        <a href="{{ path("cart_index") }}" class="btn btn-primary">
-                            {{ 'See my basket'|trans }}
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-    <section class="pt-0">
-        <div class="container">
-            <div class="row mt-7">
-                <div class="col-md-5 mb-5 mb-md-0">
-                    <div id="carouselProductIndicators" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="{{ product.imageName ? asset(product.getImagePath) : product.getImagePlaceholder }}" class="justify-content-center align-self-center d-block w-100" alt="{{ product.name }}">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselProductIndicators" role="button" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">{{ "Previous"|trans }}</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselProductIndicators" role="button" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">{{ "Next"|trans }}</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-7 ps-md-6">
-                    <div class="badge mb-3" style="background-color: {{ product.category.color }}">
-                        {{ product.category.name }}
-                    </div>
-                    <h1 class="h2 mb-4">{{ product.brand.name }} - {{ product.name }}</h1>
-                    <div class="d-flex align-items-center flex-wrap mb-4">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item me-0"><i class="fas fa-star-half-alt text-warning"></i></li>
-                            <li class="list-inline-item me-0 heading-color fw-normal">(4.5)</li>
-                        </ul>
-                        <span class="text-secondary opacity-3 mx-2 mx-sm-3">|</span>
-                        <a href="#" class="heading-color text-primary-hover mb-0">345 reviews</a>
-                        <span class="text-secondary opacity-3 mx-2 mx-sm-3">|</span>
-                        <span>86 sold</span>
-                    </div>
-                    <h4 class="text-success mb-4">
-                        {{ product.amount }}
-                        <i class="fas fa-key ms-2"></i>
-                    </h4>	
-                    <div class="mb-4">{{ product.content | html_markdown_excerpt(164) }}</div>
-                    <div class="d-grid">
-                        {% if product.stock > 0 %}
-                            <a href="{{ path("cart_add", {slug: product.slug}) }}" class="btn btn-primary mb-0 w-100">
-                                <i class="fas fa-cart-shopping me-2"></i>{{ 'Add to Cart'|trans }}
-                            </a>
-                        {% else %}
-                            <p class="fw-bold text-danger mb-0">{{ 'Temporarily out of stock'|trans }}</p>
-                        {% endif %}
-                        <p class="mb-0 mt-2 text-end small">
-                            <i class="fas fa-question text-primary me-2"></i>{{ 'Need help?'|trans }} 
-                            <a href="{{ path('contact') }}" class="mb-0">{{ 'Chat Now'|trans }}</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+						<a href="{{ path("cart_index") }}" class="btn btn-primary">{{ 'See my basket'|trans }}</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	{% endif %}
+	<section class="pt-0">
+		<div class="container">
+			<div class="row mt-7">
+				<div class="col-md-5 mb-5 mb-md-0">
+					<div id="carouselProductIndicators" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="{{ product.imageName ? asset(product.getImagePath) : product.getImagePlaceholder }}" class="justify-content-center align-self-center d-block w-100" alt="{{ product.name }}">
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselProductIndicators" role="button" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">{{ "Previous"|trans }}</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselProductIndicators" role="button" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">{{ "Next"|trans }}</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-7 ps-md-6">
+					<div class="badge mb-3" style="background-color: {{ product.category.color }}">
+						{{ product.category.name }}
+					</div>
+					<h1 class="h2 mb-4">{{ product.brand.name }}
+						-
+						{{ product.name }}</h1>
+					<div class="d-flex align-items-center flex-wrap mb-4">
+						<ul class="list-inline mb-0">
+							<li class="list-inline-item me-0">
+								<i class="fas fa-star text-warning"></i>
+							</li>
+							<li class="list-inline-item me-0">
+								<i class="fas fa-star text-warning"></i>
+							</li>
+							<li class="list-inline-item me-0">
+								<i class="fas fa-star text-warning"></i>
+							</li>
+							<li class="list-inline-item me-0">
+								<i class="fas fa-star text-warning"></i>
+							</li>
+							<li class="list-inline-item me-0">
+								<i class="fas fa-star-half-alt text-warning"></i>
+							</li>
+							<li class="list-inline-item me-0 heading-color fw-normal">(4.5)</li>
+						</ul>
+						<span class="text-secondary opacity-3 mx-2 mx-sm-3">|</span>
+						<a href="#" class="heading-color text-primary-hover mb-0">345 reviews</a>
+						<span class="text-secondary opacity-3 mx-2 mx-sm-3">|</span>
+						<span>86 sold</span>
+					</div>
+					<h4 class="text-success mb-4">
+						{{ product.amount }}
+						<i class="fas fa-key ms-2"></i>
+					</h4>
+					<div class="mb-4">{{ product.content|html_markdown_excerpt(164) }}</div>
+					<div class="d-grid">
+						{% if product.stock > 0 %}
+							<a href="{{ path("cart_add", {slug: product.slug}) }}" class="btn btn-primary mb-0 w-100">
+								<i class="fas fa-cart-shopping me-2"></i>
+								{{ 'Add to Cart'|trans }}
+							</a>
+						{% else %}
+							<p class="fw-bold text-danger mb-0">{{ 'Temporarily out of stock'|trans }}</p>
+						{% endif %}
+						<p class="mb-0 mt-2 text-end small">
+							<i class="fas fa-question text-primary me-2"></i>
+							{{ 'Need help?'|trans }}
+							<a href="{{ path('contact') }}" class="mb-0">{{ 'Chat Now'|trans }}</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
